--- a/mysite.html
+++ b/mysite.html
@@ -1,12 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my site</title>
+    <link rel="stylesheet" href="style.css">
+
 </head>
+
 <body>
-    
+    <section>
+        <div class="half">
+            <h1> Welcome To</h1>
+            <h1> <span class="kom">Afsana's</span> creation</h1>
+            <h3> build climber and tarain janina</h3>
+            <p> panipuri khabo...sudhu sudhu time na ktaia kisu na kisu kora uchit egula sikhe sikhe kaj korte korte
+                ektu ektu goti pabo,,aste aste sikbo and then ja drkr kors jabe ami na deikha type practice korte pari
+                astre aste hbe r ki ek smy..</p>
+            <a class="link-button" target="_blank" href="https://www.daraz.com.bd/"> Hire me</a>
+        </div>
+
+        <div class="half">
+            <img src="312401891_1546318225833077_8817482969952774644_n.jpg" alt="images">
+        </div>
+    </section>
+
+    <h1> pic crop kora sikha lagbe</h1>
 </body>
+
 </html>
