--- a/mysite.html
+++ b/mysite.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <section>
+    <section class="top-banner">
         <div class="half">
             <h1> Welcome To</h1>
             <h1> <span class="kom">Afsana's</span> creation</h1>
@@ -23,7 +23,7 @@
         </div>
 
         <div class="half">
-            <img src="312401891_1546318225833077_8817482969952774644_n.jpg" alt="images">
+            <img src="my-bg2.png">
         </div>
     </section>
 
