--- a/mysite.html
+++ b/mysite.html
@@ -27,7 +27,25 @@
         </div>
     </section>
 
-    <h1> pic crop kora sikha lagbe</h1>
+    <section class="dream">
+        <div>
+            <img src="my-bg2.png" alt="">
+
+        </div>
+        <div class="half">
+            <h1> Dream big</h1>
+
+            <h2> become a web developer</h2>
+            <p> panipuri khabo...sudhu sudhu time na ktaia kisu na kisu kora uchit egula sikhe sikhe kaj korte korte
+                ektu ektu goti pabo,,aste aste sikbo and then ja drkr kors jabe ami na deikha type practice korte pari
+                astre aste hbe r ki ek smy..</p>
+
+        </div>
+
+
+
+
+    </section>
 </body>
 
 </html>
