--- a/mysite.html
+++ b/mysite.html
@@ -16,9 +16,10 @@
             <h1> Welcome To</h1>
             <h1> <span class="kom">Afsana's</span> creation</h1>
             <h3> build climber and tarain janina</h3>
-            <p> panipuri khabo...sudhu sudhu time na ktaia kisu na kisu kora uchit egula sikhe sikhe kaj korte korte
-                ektu ektu goti pabo,,aste aste sikbo and then ja drkr kors jabe ami na deikha type practice korte pari
-                astre aste hbe r ki ek smy..</p>
+            <p> panipuri khabo..amr sonar bangla ami tomay valobasi.ki kora jay vaire vai valo lagena kisu ..ki korle j
+                valo lagbe allah re..ki ekta korlam saradin boisa ..obosso tao ekta kaj korsi kono rokom ...daily jmne
+                aolos vabe din katai vaire vai...klk o emne basay b oisa boisa kataite chai jeno kisu sikhte pari..ek
+                mash jehetu kisu kori nai ..</p>
             <a class="link-button" target="_blank" href="https://www.daraz.com.bd/"> Hire me</a>
         </div>
 
@@ -39,6 +40,7 @@
             <p> panipuri khabo...sudhu sudhu time na ktaia kisu na kisu kora uchit egula sikhe sikhe kaj korte korte
                 ektu ektu goti pabo,,aste aste sikbo and then ja drkr kors jabe ami na deikha type practice korte pari
                 astre aste hbe r ki ek smy..</p>
+            <a class="link-button" target="_blank" href=""> DOWNLOAD RESUME</a>
 
         </div>
 
