--- a/mysite.html
+++ b/mysite.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my site</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style2.css">
 
 </head>
 
@@ -20,7 +21,7 @@
                 valo lagbe allah re..ki ekta korlam saradin boisa ..obosso tao ekta kaj korsi kono rokom ...daily jmne
                 aolos vabe din katai vaire vai...klk o emne basay b oisa boisa kataite chai jeno kisu sikhte pari..ek
                 mash jehetu kisu kori nai ..</p>
-            <a class="link-button" target="_blank" href="https://www.daraz.com.bd/"> Hire me</a>
+            <a class="link-button" target="_blank" href="https://github.com/afsana-jahan-toma"> Hire me</a>
         </div>
 
         <div class="half">
@@ -43,11 +44,30 @@
             <a class="link-button" target="_blank" href=""> DOWNLOAD RESUME</a>
 
         </div>
+    </section>
+    <h1 class="s2"> Experiences </h1>
+    <section class="exp">
 
+        <div class="half new">
+            <h1 class="hd">Full stack Web Developer</h1>
+            <h3 class="pd"> 2021- Present | Pro level developer</h3>
+            <p> asole ami pro developer na ..ami ekta leda type developer mane ami ekhno kisui pari na..huda kame
+                falai..ami obosso sikhtesi aste aste then dekha jak ki ki pari r ki ki na pari..chesta to kore jai porer
+                ta pore..obosso ekta jahemla ase</p>
+        </div>
+        <div id="blue" class="half new">
+            <h1 class="hd"> Baby web developer</h1>
+            <h3 class="pd"> 2020-2021| Programming Hero Lerner</h3>
+            <p> asole ami pro developer na ..ami ekta leda type developer mane ami ekhno kisui pari na..huda kame
+                falai..ami obosso sikhtesi aste aste then dekha jak ki ki pari r ki ki na pari..chesta to kore jai porer
+                ta pore..obosso ekta jahemla ase</p>
 
-
+        </div>
 
     </section>
 </body>
+<footer>
+    <p> vala lagena kisu , k bujhe amr kosto</p>
+</footer>
 
 </html>
