--- a/mysite.html
+++ b/mysite.html
@@ -31,7 +31,7 @@
 
     <section class="dream">
         <div>
-            <img src="my-bg2.png" alt="">
+            <img src="my-bg.png" alt="">
 
         </div>
         <div class="half">
