--- a/mysite.html
+++ b/mysite.html
@@ -41,7 +41,7 @@
             <p> panipuri khabo...sudhu sudhu time na ktaia kisu na kisu kora uchit egula sikhe sikhe kaj korte korte
                 ektu ektu goti pabo,,aste aste sikbo and then ja drkr kors jabe ami na deikha type practice korte pari
                 astre aste hbe r ki ek smy..</p>
-            <a class="link-button" target="_blank" href=""> DOWNLOAD RESUME</a>
+            <a class="link-button" target="_blank" href="CV-Afsana-Jahan-Toma.pdf"> DOWNLOAD RESUME</a>
 
         </div>
     </section>
