--- a/mysite.html
+++ b/mysite.html
@@ -16,11 +16,12 @@
         <div class="half">
             <h1> Welcome To</h1>
             <h1> <span class="kom">Afsana's</span> creation</h1>
-            <h3> build climber and tarain janina</h3>
-            <p> panipuri khabo..amr sonar bangla ami tomay valobasi.ki kora jay vaire vai valo lagena kisu ..ki korle j
-                valo lagbe allah re..ki ekta korlam saradin boisa ..obosso tao ekta kaj korsi kono rokom ...daily jmne
-                aolos vabe din katai vaire vai...klk o emne basay b oisa boisa kataite chai jeno kisu sikhte pari..ek
-                mash jehetu kisu kori nai ..</p>
+            <h3> Build climber and tarain janina</h3>
+            <p> ekdin amr jonmo hoilo tarpor ami aste aste boro hoite suru korlam tarpor amr amma amare khaoer jnno mara
+                mari suru korlo..tarpor amare school e vorti krlo tarpor jibone dukkho suru hoilo..tarpor ami r ektu
+                boro hoilam tarpor aste aste ssc exam dilam..tarpor college e vorti houer smy hoilo tarpor amare college
+                e vorti korlo..r tarpor ki bolbo rasel vai!!!!! tarpor amar jiboner dukkher rochonar itihash suru hoilo
+            </p>
             <a class="link-button" target="_blank" href="https://github.com/afsana-jahan-toma"> Hire me</a>
         </div>
 
@@ -38,9 +39,12 @@
             <h1> Dream big</h1>
 
             <h2> become a web developer</h2>
-            <p> panipuri khabo...sudhu sudhu time na ktaia kisu na kisu kora uchit egula sikhe sikhe kaj korte korte
-                ektu ektu goti pabo,,aste aste sikbo and then ja drkr kors jabe ami na deikha type practice korte pari
-                astre aste hbe r ki ek smy..</p>
+            <p> tarpor amak colllge e vortio korlo..tarpor khali ghumai ghumai sopno dekh suru korlam...tarpor amar
+                jibone ashlo facebook..tarpor amar jibone ashlo COC.. ami pagoler moto game kheltm tarpor vai aro koto
+                crisis suru hoilo..tarpor amr phone niya gelo..tarpor ami seka khailam tarpor kono rokome ami hsc exam
+                dilam ..exam e pass korlam..tarpor admisstion er time e ami chokhe kisu dekhina..tarpor hotasha r
+                hotasha..tarpor kono rokome admission time kete gelo tarpor ekta private university te vorti hoilam
+                tarpor j ki vai exam r exam.. koydin jaoer agei exam r amr jibon hotashay jorjorito</p>
             <a class="link-button" target="_blank" href="CV-Afsana-Jahan-Toma.pdf"> DOWNLOAD RESUME</a>
 
         </div>
