--- a/mysite.html
+++ b/mysite.html
@@ -53,25 +53,29 @@
     <section class="exp">
 
         <div class="half new">
-            <h1 class="hd">Full stack Web Developer</h1>
+            <h1 class="hd">Successfull somethins about me</h1>
             <h3 class="pd"> 2021- Present | Pro level developer</h3>
-            <p> asole ami pro developer na ..ami ekta leda type developer mane ami ekhno kisui pari na..huda kame
-                falai..ami obosso sikhtesi aste aste then dekha jak ki ki pari r ki ki na pari..chesta to kore jai porer
-                ta pore..obosso ekta jahemla ase</p>
+            <p> onk onk kahinir por jiboner kisu Successfull bepar hoilo ami sesh mesh kosto mosto koira amar bsc ta
+                sesh korte parsi alhamdulillah.. tarpor SSC r HSC o sesh hoise sundor moto alhamdulillah..tarpor ami
+                ekhn mature hoiya gesi..tarpor ekhn amr kaj kam korar smy ..tarpor ami besh chill thakte jani..tarpor
+                amr ghurte valo lage onk but amak ghuranor keu nai tarpor ami abr hotash hoiya jai... tao ami khub valo
+                ghumaite pari..ghum amrlife er khub dami ekta jinsh.. </p>
         </div>
         <div id="blue" class="half new">
-            <h1 class="hd"> Baby web developer</h1>
+            <h1 class="hd"> Sad story about my life</h1>
             <h3 class="pd"> 2020-2021| Programming Hero Lerner</h3>
-            <p> asole ami pro developer na ..ami ekta leda type developer mane ami ekhno kisui pari na..huda kame
-                falai..ami obosso sikhtesi aste aste then dekha jak ki ki pari r ki ki na pari..chesta to kore jai porer
-                ta pore..obosso ekta jahemla ase</p>
+            <p> Tarpor amr jibone hotasha r hotasha ..hotashar kono sesh nai..tarpor aro ase ta hoilo ami ekhn
+                professional bekar... eijnno keu asole amare dam deyna.. tarpor r ekta berthota hoilo j ami etodin por
+                aisha bujhtesi joggota chara keu dam deyna asole.. tarpor r ki , sudhu hotasha r berthota.. tarpor amr
+                nijeke bujhar moto o keu nai..tarpor o vabi jibon sundor..evabei buro hoye jabo tarpor ekdin hotashar
+                din sesh hbe</p>
 
         </div>
 
     </section>
 </body>
 <footer>
-    <p> vala lagena kisu , k bujhe amr kosto</p>
+    <p>@ vala lagena kisu , k bujhe amr kosto</p>
 </footer>
 
 </html>
