--- a/mysite.html
+++ b/mysite.html
@@ -41,7 +41,7 @@
             <h2> become a web developer</h2>
             <p> tarpor amak colllge e vortio korlo..tarpor khali ghumai ghumai sopno dekh suru korlam...tarpor amar
                 jibone ashlo facebook..tarpor amar jibone ashlo COC.. ami pagoler moto game kheltm tarpor vai aro koto
-                crisis suru hoilo..tarpor amr phone niya gelo..tarpor ami seka khailam tarpor kono rokome ami hsc exam
+                crisis suru hoilo..tarpor amr phone niya gelo.. tarpor kono rokome ami hsc exam
                 dilam ..exam e pass korlam..tarpor admisstion er time e ami chokhe kisu dekhina..tarpor hotasha r
                 hotasha..tarpor kono rokome admission time kete gelo tarpor ekta private university te vorti hoilam
                 tarpor j ki vai exam r exam.. koydin jaoer agei exam r amr jibon hotashay jorjorito</p>
